# bold-nfs

./: AI_PROJECT_GUIDE.md  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  Cargo.toml  GEMINI.md  GOVERNANCE.md  LICENSE  README.md  SECURITY.md  SUPPORT.md
docs/: config.json  real_fs.md  Настройка контроллера домена DC-1.txt  Настройка контроллера домена DC-2.txt  Настройка подсистем.txt
examples/: Cargo.toml  fs_util.rs  mirrorfs.rs  real_fs_example.rs
exec/: Cargo.toml
exec/src/: main.rs  main_real_fs.rs
lib/: Cargo.toml
lib/src/: lib.rs
lib/src/server/: clientmanager.rs
lib/src/server/filemanager/: fs_util.rs  handle.rs  locking.rs  mod.rs  nfs.rs  real_fs.rs  vfs.rs
lib/src/server/nfs40/: op_close.rs  op_create.rs  op_getattr.rs  op_lookup.rs  op_open.rs  op_openconfirm.rs  op_putfh.rs  op_read.rs  op_readdir.rs  op_remove.rs  op_write.rs
proto/src/: nfs4_proto.rs
tests/integration/: test_real_fs.py
